--- a/03/aoc_03.ipynb
+++ b/03/aoc_03.ipynb
@@ -197,6 +197,18 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "e187cf92-306c-4bc7-9e0a-bb3492e24647",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Using Python without reinventing the wheel\n",
+    "gamma_rate_dec=int(''.join([str(d) for d in gamma_rate]) , 2)\n",
+    "epsilon_rate_dec=int(''.join([str(d) for d in epsilon_rate]) , 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "d4a20cd3-ed52-4d27-9028-fd0ee4fabfa4",
    "metadata": {},
    "outputs": [],
@@ -206,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "509c6a64-3c33-4a0a-8910-3eae8beb1189",
    "metadata": {},
    "outputs": [
@@ -232,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "5ca9e765-888f-4c01-a450-d462b4a6ec8f",
    "metadata": {},
    "outputs": [
@@ -259,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "48ebc0f6-413a-468f-bfde-8e67390cab6c",
    "metadata": {},
    "outputs": [
@@ -286,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "295bf47e-5962-441d-bbee-32bd1afbcfaf",
    "metadata": {},
    "outputs": [
@@ -296,7 +308,7 @@
        "[1, 1, 1, 0, 1, 0, 0, 0, 0, 1, 0, 0]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "03e45213-b20d-4c11-8229-c7cd6a5e7faf",
    "metadata": {},
    "outputs": [],
@@ -321,7 +333,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
+   "id": "de4369eb-7108-432d-b941-8eee155706c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Less smart, but using Python :-D\n",
+    "result=(\n",
+    "    int(generator_rating_o2[0],2)\n",
+    "    * int(generator_rating_co2[0],2)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "ab9d3fc9-e857-4a4b-85aa-363a0a93deec",
    "metadata": {},
    "outputs": [
@@ -336,6 +362,14 @@
    "source": [
     "print(f\"Result for part 2: {result}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69198e3d-ca17-4b92-94f4-045d75b7de3b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
