Part 2 compute from 18 secs to <1 sec

--- a/07/aoc_07.ipynb
+++ b/07/aoc_07.ipynb
@@ -198,8 +198,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 313 ms, sys: 4.1 ms, total: 317 ms\n",
-      "Wall time: 315 ms\n"
+      "CPU times: user 317 ms, sys: 3.75 ms, total: 320 ms\n",
+      "Wall time: 319 ms\n"
      ]
     }
    ],
@@ -213,20 +213,9 @@
    "execution_count": 14,
    "id": "02381a3a-8fc0-4bac-bec3-e00efa0b28a1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(343441, 321)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "min(costs)"
+    "result=min(costs)[0]"
    ]
   },
   {
@@ -252,7 +241,7 @@
    "id": "42566fca-c215-490a-8395-ad3929d75543",
    "metadata": {},
    "source": [
-    "## Part 2"
+    "## Part 2 (compute every time)"
    ]
   },
   {
@@ -320,8 +309,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 18.7 s, sys: 26.7 ms, total: 18.7 s\n",
-      "Wall time: 18.7 s\n"
+      "CPU times: user 18.7 s, sys: 29.4 ms, total: 18.7 s\n",
+      "Wall time: 18.8 s\n"
      ]
     }
    ],
@@ -367,6 +356,159 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "49c45c9b-3a4d-4698-931e-f777dac41cda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result for part 2: 98925151\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Result for part 2: {result}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c19d3f96-aacb-4b56-a9f1-e1209a4bb643",
+   "metadata": {},
+   "source": [
+    "## Part 2 (store all costs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "2faab24a-93a2-4303-96ff-994990a66ec5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cost_of_path_incremental(length=0) -> int:\n",
+    "    return sum(range(length+1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "bbf412ec-2148-4d9f-b38c-18bfe4b05e1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "COST_OF_PATH={i: cost_of_path_incremental(i) for i in range(min(data),max(data)+1)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ed3c3495-1657-4784-abcc-3716f6103be8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "COST_OF_PATH.get(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "f7a22532-b09b-406b-a291-22b6db2f88e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cost_of_path_incremental_const(length=0) -> int:\n",
+    "    return COST_OF_PATH.get(length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "14d86972-6f12-4377-acc4-b6b78863fd82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "210187965"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cost_for_level(cost_of_path_incremental_const, data, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "2995fddb-4f01-4dac-9525-a393d40af5a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 397 ms, sys: 2.39 ms, total: 399 ms\n",
+      "Wall time: 399 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "costs=[(cost_for_level(cost_of_path_incremental_const, data, i), i) for i in range(min(data),max(data))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "1b661b77-9e64-48b9-8c46-de966c8d6837",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(98925151, 473)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min(costs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "988abe32-0cd7-4e84-acc2-73d36afb6a58",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "result=min(costs)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "3765bee3-de18-4246-b7c5-4f7cacbb1e92",
    "metadata": {},
    "outputs": [
     {
