Some minor formatting

--- a/07/aoc_07.ipynb
+++ b/07/aoc_07.ipynb
@@ -35,6 +35,7 @@
     "    raw_data=[line for line in f.read().splitlines()]\n",
     "    f.close()\n",
     "\n",
+    "# Check\n",
     "raw_data[:3]"
    ]
   },
@@ -163,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cost_for_level(func_cost, positions: list, level=0) -> int:\n",
+    "def cost_for_level(func_cost: callable, positions: list, level: int) -> int:\n",
     "    return sum([func_cost(abs(level-positions[i])) for i in range(len(positions))])"
    ]
   },
@@ -185,6 +186,7 @@
     }
    ],
    "source": [
+    "# Check\n",
     "cost_for_level(cost_of_path_liniar, data, 2)"
    ]
   },
@@ -198,8 +200,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 317 ms, sys: 3.75 ms, total: 320 ms\n",
-      "Wall time: 319 ms\n"
+      "CPU times: user 329 ms, sys: 6.08 ms, total: 336 ms\n",
+      "Wall time: 334 ms\n"
      ]
     }
    ],
@@ -241,7 +243,7 @@
    "id": "42566fca-c215-490a-8395-ad3929d75543",
    "metadata": {},
    "source": [
-    "## Part 2 (compute every time)"
+    "## Part 2 (Compute every time)"
    ]
   },
   {
@@ -275,6 +277,7 @@
     }
    ],
    "source": [
+    "# Check\n",
     "for i in range(6): print(i, cost_of_path_incremental(i))"
    ]
   },
@@ -296,6 +299,7 @@
     }
    ],
    "source": [
+    "# Check\n",
     "cost_for_level(cost_of_path_incremental, data, 2)"
    ]
   },
@@ -309,8 +313,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 18.7 s, sys: 29.4 ms, total: 18.7 s\n",
-      "Wall time: 18.8 s\n"
+      "CPU times: user 19.1 s, sys: 57.8 ms, total: 19.1 s\n",
+      "Wall time: 19.2 s\n"
      ]
     }
    ],
@@ -337,6 +341,7 @@
     }
    ],
    "source": [
+    "# Check\n",
     "min(costs)"
    ]
   },
@@ -382,10 +387,12 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "2faab24a-93a2-4303-96ff-994990a66ec5",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "def cost_of_path_incremental(length=0) -> int:\n",
+    "def cost_of_path_incremental(length: int) -> int:\n",
     "    return sum(range(length+1))"
    ]
   },
@@ -393,7 +400,9 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "bbf412ec-2148-4d9f-b38c-18bfe4b05e1f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "COST_OF_PATH={i: cost_of_path_incremental(i) for i in range(min(data),max(data)+1)}"
@@ -417,6 +426,7 @@
     }
    ],
    "source": [
+    "# Check\n",
     "COST_OF_PATH.get(2)"
    ]
   },
@@ -427,7 +437,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cost_of_path_incremental_const(length=0) -> int:\n",
+    "def cost_of_path_incremental_const(length: int) -> int:\n",
     "    return COST_OF_PATH.get(length)"
    ]
   },
@@ -449,6 +459,7 @@
     }
    ],
    "source": [
+    "# Check\n",
     "cost_for_level(cost_of_path_incremental_const, data, 2)"
    ]
   },
@@ -462,8 +473,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 397 ms, sys: 2.39 ms, total: 399 ms\n",
-      "Wall time: 399 ms\n"
+      "CPU times: user 398 ms, sys: 3.84 ms, total: 402 ms\n",
+      "Wall time: 401 ms\n"
      ]
     }
    ],
@@ -522,14 +533,6 @@
    "source": [
     "print(f\"Result for part 2: {result}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ddb1f01e-9278-4f50-99ff-31a45446ecde",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
