--- a/07/aoc_07.ipynb
+++ b/07/aoc_07.ipynb
@@ -200,8 +200,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 329 ms, sys: 6.08 ms, total: 336 ms\n",
-      "Wall time: 334 ms\n"
+      "CPU times: user 308 ms, sys: 4.93 ms, total: 313 ms\n",
+      "Wall time: 311 ms\n"
      ]
     }
    ],
@@ -313,8 +313,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 19.1 s, sys: 57.8 ms, total: 19.1 s\n",
-      "Wall time: 19.2 s\n"
+      "CPU times: user 18.5 s, sys: 15.8 ms, total: 18.5 s\n",
+      "Wall time: 18.5 s\n"
      ]
     }
    ],
@@ -378,7 +378,9 @@
   {
    "cell_type": "markdown",
    "id": "c19d3f96-aacb-4b56-a9f1-e1209a4bb643",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Part 2 (store all costs)"
    ]
@@ -386,19 +388,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "2faab24a-93a2-4303-96ff-994990a66ec5",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def cost_of_path_incremental(length: int) -> int:\n",
-    "    return sum(range(length+1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
    "id": "bbf412ec-2148-4d9f-b38c-18bfe4b05e1f",
    "metadata": {
     "tags": []
@@ -410,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "ed3c3495-1657-4784-abcc-3716f6103be8",
    "metadata": {},
    "outputs": [
@@ -420,7 +409,7 @@
        "3"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "f7a22532-b09b-406b-a291-22b6db2f88e6",
    "metadata": {},
    "outputs": [],
@@ -443,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "14d86972-6f12-4377-acc4-b6b78863fd82",
    "metadata": {},
    "outputs": [
@@ -453,7 +442,7 @@
        "210187965"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "2995fddb-4f01-4dac-9525-a393d40af5a1",
    "metadata": {},
    "outputs": [
@@ -473,8 +462,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 398 ms, sys: 3.84 ms, total: 402 ms\n",
-      "Wall time: 401 ms\n"
+      "CPU times: user 404 ms, sys: 3.21 ms, total: 407 ms\n",
+      "Wall time: 406 ms\n"
      ]
     }
    ],
@@ -485,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "1b661b77-9e64-48b9-8c46-de966c8d6837",
    "metadata": {},
    "outputs": [
@@ -495,7 +484,7 @@
        "(98925151, 473)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "988abe32-0cd7-4e84-acc2-73d36afb6a58",
    "metadata": {
     "tags": []
@@ -518,8 +507,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "3765bee3-de18-4246-b7c5-4f7cacbb1e92",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result for part 2: 98925151\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Result for part 2: {result}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b46ed18a-6dda-4f71-aa4c-203318d092df",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Part 2 (math formula for cost)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "980d7fdc-d644-4754-944a-1d2eaae41b99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cost_of_path_incremental_math(length=0) -> int:\n",
+    "    return length*(length+1)//2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "d70d1f97-4568-4e5a-81bb-31eeb2912353",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0 0\n",
+      "1 1 1\n",
+      "2 3 3\n",
+      "3 6 6\n",
+      "4 10 10\n",
+      "5 15 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check\n",
+    "for i in range(6): print(i, cost_of_path_incremental(i), cost_of_path_incremental_math(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "1ec111fd-dcc2-4f9a-a058-36f095a1de4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 429 ms, sys: 4.92 ms, total: 434 ms\n",
+      "Wall time: 433 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "costs=[(cost_for_level(cost_of_path_incremental_math, data, i), i) for i in range(min(data),max(data))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "49097352-f4cc-4e37-ae70-20756b6c4ca9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(98925151, 473)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min(costs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "c0060946-dc8c-4471-bd27-11c5d8a06a43",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "result=min(costs)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "1407875f-f7c1-4600-86da-3e904946aa49",
    "metadata": {},
    "outputs": [
     {
