modified:   09/aoc_09.ipynb for Part 2

--- a/09/aoc_09.ipynb
+++ b/09/aoc_09.ipynb
@@ -66,19 +66,16 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[5, 4, 3, 2, 3]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 4, 3, 2, 3, 4, 5, 6, 7, 8, 9, 8, 9, 9, 9, 8, 9, 3, 4, 5, 7, 9, 7, 8, 9, 7, 6, 5, 4, 5, 9, 8, 7, 6, 7, 6, 5, 4, 6, 7, 8, 9, 2, 3, 9, 9, 7, 6, 7, 9, 5, 4, 5, 6, 7, 8, 9, 3, 2, 1, 2, 9, 8, 7, 8, 9, 8, 4, 1, 0, 4, 5, 6, 7, 8, 9, 3, 2, 9, 8, 7, 6, 7, 1, 0, 1, 4, 5, 6, 7, 8, 9, 9, 8, 7, 6, 5, 4, 3, 2]\n"
+     ]
     }
    ],
    "source": [
     "# Check\n",
-    "data[0][:5]"
+    "print(data[0])"
    ]
   },
   {
@@ -96,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Dict, Set"
+    "from typing import Dict, Set, Tuple"
    ]
   },
   {
@@ -170,16 +167,110 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "570b02a0-dae6-40f5-9a56-5825c246152f",
+   "id": "d5e21485-20bd-42cc-a0ef-02ebff450f4f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[((0, 3), {(0, 3)}), ((0, 17), {(0, 17)}), ((0, 42), {(0, 42)})]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "result=-1"
+    "basins=dict()\n",
+    "for local_min in local_mins:\n",
+    "    basins[local_min]={local_min}\n",
+    "\n",
+    "# Check \n",
+    "list(basins.items())[0:3]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "d7ea5740-761f-4aa9-a8c4-c23443e25a86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Recursive procedure to the rescue!\n",
+    "def mark_basin(start_point: Tuple[int,int], mark_point: Tuple[int,int]):\n",
+    "    global basins\n",
+    "    # print(start_point, mark_point, basins[start_point], basins)\n",
+    "    basins[start_point].add(mark_point)\n",
+    "    for j,i in {(mark_point[0]-1,mark_point[1]),(mark_point[0]+1,mark_point[1]),(mark_point[0],mark_point[1]-1),(mark_point[0],mark_point[1]+1)}:\n",
+    "        if (j not in {-1,len(data)}) and (i not in {-1,len(data[0])}) and ((j,i) not in basins[start_point]) and (data[j][i]!=9):\n",
+    "            mark_basin(start_point=start_point, mark_point=(j,i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e1883096-477f-4c15-bc78-5ed267a6c022",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "224\n",
+      "CPU times: user 24.3 ms, sys: 2.04 ms, total: 26.4 ms\n",
+      "Wall time: 25.1 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "basin_areas=[]\n",
+    "for local_min in local_mins:\n",
+    "    mark_basin(start_point=local_min, mark_point=local_min)\n",
+    "    basin_areas.append(len(basins[local_min]))\n",
+    "\n",
+    "# Check\n",
+    "print(len(basin_areas))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ab3523e0-c239-4c0c-82b3-dcd9922471de",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[95, 99, 101]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "basin_areas.sort()\n",
+    "# Check\n",
+    "basin_areas[-3:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "856e8351-de81-4c89-9f9e-3990f31dae72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "result=math.prod(basin_areas[-3:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "85b8d65e-87ad-4fbb-b9de-1e6570da3257",
    "metadata": {},
    "outputs": [
@@ -187,21 +278,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Result for part 2: -1\n"
+      "Result for part 2: 949905\n"
      ]
     }
    ],
    "source": [
     "print(f\"Result for part 2: {result}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "800df4b3-5ef8-4586-a28d-4cd003382776",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
