modified:   17/aoc_17.ipynb (part 2 included)

--- a/17/aoc_17.ipynb
+++ b/17/aoc_17.ipynb
@@ -56,23 +56,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x=269..292, y=-68..-44\n",
-      "[['x', '269..292'], ['y', '-68..-44']]\n",
-      "(269, 292)\n",
-      "(-68, -44)\n"
+      "X in: (269, 292), Y in: (-68, -44)\n"
      ]
     }
    ],
    "source": [
     "data=[area for area in raw_data[0].split(': ')][1]\n",
-    "print(data)\n",
+    "#print(data)\n",
     "\n",
     "data=[[part for part in axes.split('=')] for axes in data.split(', ')]\n",
-    "print(data)\n",
+    "#print(data)\n",
     "\n",
     "x_range, y_range=[tuple(int(m) for m in ranges[1].split('..')) for ranges in data]\n",
-    "print(x_range)\n",
-    "print(y_range)"
+    "print(f\"X in: {x_range}, Y in: {y_range}\")"
    ]
   },
   {
@@ -202,16 +198,109 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "570b02a0-dae6-40f5-9a56-5825c246152f",
-   "metadata": {},
-   "outputs": [],
+   "id": "a12c024c-f386-4911-b610-0330a7f092ae",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "90"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "result=-1"
+    "vx_values=[]\n",
+    "\n",
+    "for potential_vx_value in range (min(possible_nr_steps_for_x), (max(x_range)+1)):\n",
+    "    # print(potential_vx_value)\n",
+    "    step=1\n",
+    "    x_atstep=x_loc(potential_vx_value, step)\n",
+    "    while x_atstep<=x_range[1] and step<=potential_vx_value:\n",
+    "        if x_range[0]<=x_atstep<=x_range[1]: vx_values.append((step, potential_vx_value, x_atstep))\n",
+    "        step+=1\n",
+    "        x_atstep=x_loc(potential_vx_value, step)        \n",
+    "\n",
+    "len(vx_values)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "db1b66d7-2992-4fce-933f-f6d08eec9a27",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "146"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vy_values=[]\n",
+    "\n",
+    "for potential_vy_value in range (min(y_range), abs(min(y_range))):\n",
+    "    step=1\n",
+    "    y_atstep=y_loc(potential_vy_value, step)\n",
+    "    while y_atstep>=y_range[0]:\n",
+    "        # print(potential_vy_value, step, y_atstep)\n",
+    "        if y_range[0]<=y_atstep<=y_range[1]: vy_values.append((step, potential_vy_value, y_atstep))\n",
+    "        step+=1\n",
+    "        y_atstep=y_loc(potential_vy_value, step)\n",
+    "\n",
+    "len(vy_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ebb70a85-f122-4dfe-abc9-8faf17472883",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(269, -68), (270, -68), (271, -68), (272, -68), (273, -68)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "start_velocities=[(vx_value[1], vy_value[1]) \n",
+    " for vy_value in vy_values \n",
+    " for vx_value in vx_values\n",
+    " if (vy_value[0]==vx_value[0]) or (vx_value[0]==vx_value[1] and vy_value[0]>vx_value[0])\n",
+    "]\n",
+    "# Check\n",
+    "start_velocities[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "570b02a0-dae6-40f5-9a56-5825c246152f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result=len(set(start_velocities))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "85b8d65e-87ad-4fbb-b9de-1e6570da3257",
    "metadata": {},
    "outputs": [
@@ -219,21 +308,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Result for part 2: -1\n"
+      "Result for part 2: 996\n"
      ]
     }
    ],
    "source": [
     "print(f\"Result for part 2: {result}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "800df4b3-5ef8-4586-a28d-4cd003382776",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
