New :   21/aoc_21.ipynb (Part 1)

--- a/21/aoc_21.ipynb
+++ b/21/aoc_21.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "847d28c4-2f7a-48a5-b456-0c736ecfda7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Test\n",
+    "start_positions=(4,8)\n",
+    "#Prod\n",
+    "start_positions=(9,6)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e31f7cbc-d29d-407b-9a26-4e9dfbebd9f8",
    "metadata": {},
@@ -10,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1ed810de-c5b7-439c-8d9a-961e207a90ca",
    "metadata": {},
    "outputs": [],
@@ -35,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7cd58f1b-b0ec-4201-84c2-1a7ea8b6e012",
    "metadata": {},
    "outputs": [],
@@ -55,15 +68,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "0e946fd8-df38-47af-b248-7ea3eadd4688",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Game:\n",
-    "    def __init__(self, start_positions: tuple):\n",
+    "    def __init__(self, start_positions: tuple, winning_score: int):\n",
     "        self.players=[Player(start_position=pos, board_size=10) for pos in start_positions]\n",
     "        self.die=Die(100)\n",
+    "        self.WINNING_SCORE=winning_score\n",
     "        \n",
     "    def play(self)->int:\n",
     "        NR_ROLLS_PER_PLAYER=3\n",
@@ -75,49 +89,67 @@
     "                    roll_total_score+=roll_result[0]\n",
     "                p_score = self.players[player_nr].add_score(roll_total_score)\n",
     "                # print(f\"player: {player_nr}, position: {self.players[player_nr].position}, roll_score: {roll_total_score}, p_score: {p_score}\")\n",
-    "                if p_score >=1000:\n",
-    "                    return self.players[1-player_nr].score * roll_result[1]"
+    "                if p_score >=self.WINNING_SCORE:\n",
+    "                    return (player_nr, self.players, self.die)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "018e16da-1b81-49be-8afe-1d904946f688",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 0]"
+       "[9, 6]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "start_positions=(4,8)\n",
-    "start_positions=(9,6)\n",
-    "g=Game(start_positions)\n",
-    "[p.score for p in g.players]"
+    "g=Game(start_positions, 1000)\n",
+    "[p.position for p in g.players]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "46258b03-c5d4-4387-9fa6-d443e67e3445",
+   "execution_count": 6,
+   "id": "8196fc9a-c646-4b66-904a-0e764a84d6cd",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "result=g.play()"
+    "game_end_state=g.play()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
+   "id": "975fc0b0-4259-4cce-97a1-d13dce8a9343",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Player 1 won with the core 1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Player {game_end_state[0]} won with the core {game_end_state[1][game_end_state[0]].score}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "bb6890d4-7048-406d-b70f-ca27bc744dee",
    "metadata": {},
    "outputs": [
@@ -130,6 +162,7 @@
     }
    ],
    "source": [
+    "result=game_end_state[1][1-game_end_state[0]].score * game_end_state[2].rolls\n",
     "print(f\"Result for part 1: {result}\")"
    ]
   },
@@ -144,6 +177,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "340a0aa0-e208-455b-8962-b01682bf582e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "570b02a0-dae6-40f5-9a56-5825c246152f",
    "metadata": {},
    "outputs": [],
@@ -153,10 +194,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "85b8d65e-87ad-4fbb-b9de-1e6570da3257",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result for part 2: -1\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Result for part 2: {result}\")"
    ]
